--- a/style1.css
+++ b/style1.css
@@ -20,8 +20,10 @@ html,body{
   color: #fff;
 }
 .wrapper{
-  overflow: hidden;
-  max-width: 390px;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  max-height: 70%;
+  width: 30%;
   background: #fff;
   padding: 30px;
   border-radius: 15px;
