--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ body{
 }
 
 .container .header .navitems li a:hover{
-    color: #8e4cd5;
+    color: #ffffff;
     font-size: 1.5vw;
     font-weight: 700;
 }
