--- a/style2.css
+++ b/style2.css
@@ -1,26 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600&display=swap');
 
 body {
-    background-image: linear-gradient(40deg,
-     hsl(240deg 56% 48%) 0%,
-     hsl(250deg 48% 49%) 10%,
-     hsl(260deg 40% 49%) 24%,
-     hsl(271deg 34% 50%) 42%,
-     hsl(285deg 28% 50%) 57%,
-     hsl(305deg 24% 50%) 68%,
-     hsl(325deg 29% 54%) 75%,
-     hsl(340deg 34% 58%) 81%,
-     hsl(354deg 40% 62%) 85%,
-     hsl(358deg 39% 63%) 89%,
-     hsl(353deg 31% 62%) 92%,
-     hsl(345deg 22% 61%) 94%,
-     hsl(330deg 14% 60%) 96%,
-     hsl(284deg 9% 60%) 97%,
-     hsl(232deg 12% 62%) 98%,
-     hsl(212deg 22% 61%) 99%,
-     hsl(204deg 32% 60%) 100%,
-     hsl(200deg 41% 58%) 100%);
-    background-repeat: no-repeat;
+    background-image: url(Gradient\ BG.jpg);
     height: 99vh;
     overflow-y: hidden;
     display: flex;
