--- a/style4.css
+++ b/style4.css
@@ -1,4 +1,8 @@
-body {
+  *{
+  box-sizing: border-box;
+  }
+
+  body {
   font-family: Arial, sans-serif;
   background-color: #a1a0a0;
   padding: 20px;
@@ -10,32 +14,61 @@ body {
 
 }
 
-nav {
-  background-color: #82707080;
-  padding: 10px 0;
-  border-radius: 2%;
+.header {
+  width: 100%;
+  background: rgba(255, 255, 255, 0.2);
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 30px;
 }
 
-nav ul {
-  list-style-type: none;
-  padding: 0;
+.header h4 {
   margin: 0;
-  text-align: center;
+  color: #fff;
+  font-size: 24px;
 }
 
-nav ul li {
-  display: inline;
-  margin: 0 10px;
+.header span {
+  color: #ffeb3b;
 }
 
-nav ul li a {
-  color: white;
+.navitems {
+  list-style: none;
+  display: flex;
+}
+
+.navitems li {
+  margin: 0 15px;
+}
+
+.navitems a {
+  color: #fff;
   text-decoration: none;
   font-weight: bold;
+  transition: color 0.3s ease;
 }
 
-nav ul li a:hover {
-  color: #ff0084;
+.navitems a:hover {
+  color: #ffeb3b;
+}
+
+.header .btn{
+  font-size: 16px;
+  font-weight: bold;
+  outline: none;
+  padding: 7px 10px;
+  border: none;
+  border-radius: 10px;
+  background-color: #ffeb3b;
+  color: #000;
+  transition: all .3s ease-in-out;
+}
+
+.header .btn:hover{
+  cursor: pointer;
+  background-color: #cbbb2f;
 }
 
 h1 {
