--- a/style3.css
+++ b/style3.css
@@ -8,8 +8,10 @@ body {
 
 /* Navigation bar styles */
 nav {
-  background-color: #333;
-  padding: 10px 0;
+  background: -webkit-linear-gradient(right,#aa00ff,#6f00ff,#5512fb,#3c00ff);
+  padding: 20px 0;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 nav ul {
@@ -37,7 +39,7 @@ nav ul li a:hover {
 
 /* Header styles */
 header {
-  background-color: #4a4a4a;
+  background: -webkit-linear-gradient(right,#aa00ff,#6f00ff,#5512fb,#3c00ff);
   color: white;
   text-align: center;
   padding: 20px 0;
@@ -56,7 +58,7 @@ header h1 {
 }
 
 .award-card {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.175);
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
   margin: 15px;
@@ -89,7 +91,7 @@ header h1 {
 
 /* Footer styles */
 footer {
-  background-color: #333;
+  background: -webkit-linear-gradient(right,#aa00ff,#6f00ff,#5512fb,#3c00ff);
   color: white;
   text-align: center;
   padding: 10px 0;
