--- a/style.css
+++ b/style.css
@@ -177,3 +177,12 @@ body{
     transform: scale(1.05);
     background-color: #ffffff;
 }
+
+#preloader{
+    background: black url(LOGO.png) no-repeat center;
+    background-size: 25%;
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+}
