--- a/style3.css
+++ b/style3.css
@@ -1,45 +1,88 @@
 /* General styles */
 body {
   font-family: Arial, sans-serif;
+  padding: 20px;
+  display: grid;
+  background-image: url(Gradient\ BG.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.header {
+  width: auto;
+  background: rgba(255, 255, 255, 0.2);
+  padding: 8px 15px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.header h4 {
   margin: 0;
-  padding: 0;
-  background-color: #f0f0f0;
+  color: #fff;
+  font-size: 24px;
 }
 
-/* Navigation bar styles */
-nav {
-  background: -webkit-linear-gradient(right,#aa00ff,#6f00ff,#5512fb,#3c00ff);
-  padding: 20px 0;
-  margin-bottom: 10px;
-  margin-top: 10px;
+.header span {
+  color: #1aff00;
 }
 
-nav ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  text-align: center;
+.navitems {
+  padding: 0 380px;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  align-items: center;
 }
 
-nav ul li {
-  display: inline;
-  margin: 0 10px;
+.navitems li {
+  margin: 10px 15px;
 }
 
-nav ul li a {
-  color: white;
+.navitems a {
+  color: #fff;
   text-decoration: none;
-  font-weight: bold;
-  transition: color 0.3s ease;
+  font-size: 1.2vw;
+  transition: all 0.3s ease-in-out;
 }
 
-nav ul li a:hover {
-  color: #ffd700;
+.navitems a:hover {
+  color: #ffffff;
+  font-size: 1.35vw;
+}
+
+.header .btn{
+  font-size: 16px;
+  font-weight: bold;
+  outline: none;
+  padding: 7px 10px;
+  border: none;
+  border-radius: 10px;
+  background-color: #ffeb3b;
+  color: #000;
+  transition: all .3s ease-in-out;
+}
+
+.header .btn:hover{
+  cursor: pointer;
+  background-color: #cbbb2f;
+}
+
+.profile-img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+  padding: 0 15px;
 }
 
 /* Header styles */
 header {
-  background: -webkit-linear-gradient(right,#aa00ff,#6f00ff,#5512fb,#3c00ff);
+  background: rgba(255, 255, 255, 0.2);
   color: white;
   text-align: center;
   padding: 20px 0;
@@ -81,12 +124,12 @@ header h1 {
 }
 
 .award-card h2 {
-  color: #333;
+  color: #000000;
   margin-top: 0;
 }
 
 .award-card p {
-  color: #666;
+  color: #ffffff;
 }
 
 /* Footer styles */
@@ -94,8 +137,6 @@ footer {
   background: -webkit-linear-gradient(right,#aa00ff,#6f00ff,#5512fb,#3c00ff);
   color: white;
   text-align: center;
-  padding: 10px 0;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
+  padding: 10px;
+  width: auto;
 }
